Changes to use GUI behind proxy. Bug fixes

--- a/gui/client/src/simpleview.css
+++ b/gui/client/src/simpleview.css
@@ -34,6 +34,7 @@
 .simpleview .centerview {
 flex:1;
 display:flex;
+height: 100%;
 }
 
 .simpleview #mainpane {
